# teaparty

./: .env.example  .gitignore  .mcp.json  .proxy-interactions.jsonl  404.html  CONTRIBUTING.md  FACT_CHECK_SUPPLEMENTAL.md  INTENT.md  LICENSE  PLAN.md  README.md  ROADMAP.md  TASKLIST.md  TOOL_GAPS.md  cfa-state-machine.json  coding_task.txt  essay.md  folklore-sources-knock-knock.md  humor-theory-knock-knock-research.md  index.html  joke.md  knock-knock-academic-sources.md  knock-knock-history.md  knock-knock-joke-history.md  knock-knock-jokes-research.md  linguistics-pun-phonetic-ambiguity-sources.md  mkdocs.yml  pass3-task.txt  phase1-task.txt  phase2-task.txt  pyproject.toml  run_relay.py  run_tests.sh  teaparty-intent-pipeline.md  teaparty.sh  worktrees.json  writing-task.txt
.claude/: .claude.json  .claude.json.backup.1771382135158  CLAUDE.md  CLAUDE_README.md  launch.json  plan.md  settings.json  tasks  teams
.teaparty/: teaparty.yaml
.teaparty.local/: project.yaml
ARCHITECTURE/: index.html
UX/: index.html
agent-dispatch/: index.html
agents/: coding-team.json  configuration-team.json  flat-team.json  management-team.json  uber-team.json
audit-issue/: context.md  factcheck-review.md  intent-review.md  prior-findings.md
book/: SPEC.md  TOC.md  bibliography.md  chapter-1-origins-and-precursors.md  chapter-2-the-1930s-craze.md  chapter-3-golden-age-and-backlash.md  chapter-4-popular-culture.md  chapter-5-global-and-internet.md  chapter-6-why-it-works.md  editorial-notes.md  research-dossier.md
bridge/: __main__.py  message_relay.py  server.py  stats.py
cfa-state-machine/: index.html
cognitive-architecture/: index.html
detailed-design/: index.html
docs/: ARCHITECTURE.md  COGARCH.md  agent-dispatch.md  (+27 more)
(+2254 files in other folders)
