[project]
name = "teaparty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "textual>=3.0.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.0",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-material>=9.7.5",
    "pytest>=9.0.2",
    "scipy>=1.14.0",
]
