[project]
name = "teaparty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "filelock>=3.0",
    "mcp>=1.26.0",
    "python-statemachine>=3.0.0",
    "pyyaml>=6.0",
    "textual>=3.0.0",
    "youtube-transcript-api>=1.2.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "matplotlib>=3.9.0",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-material>=9.7.5",
    "pytest>=9.0.2",
]
